02_code1/grade.txt
Grading at Thu Apr 30 16:32:55 UTC 2020
Checking code1.c for legal syntax
temp.c: In function ‘max’:
temp.c:9:5: error: expected ‘}’ before ‘else’
     else {
     ^
temp.c: At top level:
temp.c:13:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
temp.c: In function ‘main’:
temp.c:20:10: error: too many arguments for format [-Werror=format-extra-args]
   printf("max(0x451215AF, 0x913591AF) is $d\n", max(0x451215AF, 0x913591AF));
          ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
